Update docs, more docstrings, maskedLMbias detection

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,9 @@ theme:
   icon:
     repo: fontawesome/brands/git-alt
 
+  features:
+    - content.code.copy
+
   palette: 
     # Palette toggle for light mode
     - scheme: default
@@ -19,3 +22,12 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
