--- a/mkgendocs.yml
+++ b/mkgendocs.yml
@@ -4,10 +4,19 @@ repo: https://github.com/biaslyze-dev/biaslyze
 version: main
 
 pages:
-  - page: "biaslyze/bias_detectors.md"
-    source: "biaslyze/bias_detectors.py"
+  - page: "biaslyze/bias_detectors/lime_keyword_biasdetector.md"
+    source: "biaslyze/bias_detectors/lime_keyword_biasdetector.py"
     classes:
-      - KeywordBiasDetector 
+      - LimeKeywordBiasDetector
+  - page: "biaslyze/bias_detectors/masked_keyword_biasdetector.md"
+    source: "biaslyze/bias_detectors/masked_keyword_biasdetector.py"
+    classes:
+      - MaskedKeywordBiasDetector
+  - page: "biaslyze/evaluation_results.md"
+    source: "biaslyze/evaluation_results.py"
+    classes:
+      - EvaluationResult
+      - BiasedSampleResult 
   - page: "biaslyze/concept_detectors.md"
     source: "biaslyze/concept_detectors.py"
     classes:
@@ -16,3 +25,4 @@ pages:
     source: "biaslyze/evaluators.py"
     classes:
       - LimeBiasEvaluator 
+      - MaskedLMBiasEvaluator
