--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ mkdocs-material = "^9.1.1"
 mkgendocs = "^0.9.2"
 black = "^23.1.0"
 transformers = "^4.26.1"
+isort = "^5.12.0"
+ruff = "^0.0.254"
 
 
 [build-system]
