--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ black = "^23.1.0"
 transformers = "^4.26.1"
 isort = "^5.12.0"
 ruff = "^0.0.254"
+spacy = "^3.5.0"
+loguru = "^0.6.0"
 
 
 [build-system]
