Improve docs structure and enable custom pages

--- a/mkgendocs.yml
+++ b/mkgendocs.yml
@@ -1,5 +1,5 @@
-sources_dir: docs
-templates_dir: docs/templates
+sources: docs/sources
+templates: docs/templates
 repo: https://github.com/biaslyze-dev/biaslyze
 version: main
 
