--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ isort = "^5.12.0"
 ruff = "^0.0.254"
 spacy = "^3.5.0"
 loguru = "^0.6.0"
+matplotlib = "^3.7.1"
+bokeh = "^3.1.0"
 
 
 [build-system]
