Add support for sensetivity score wip

--- a/mkgendocs.yml
+++ b/mkgendocs.yml
@@ -25,4 +25,4 @@ pages:
     source: "biaslyze/evaluators.py"
     classes:
       - LimeBiasEvaluator 
-      - MaskedLMBiasEvaluator
+      - MaskedBiasEvaluator
