--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,11 +18,14 @@ nav:
     - Overview: api-overview.md
     - Concept detectors: biaslyze/concept_detectors.md
     - Bias detectors : 
-      - LimeKeywordBiasDetector: biaslyze/bias_detectors/lime_keyword_biasdetector.md
-      - MaskedKeywordBiasDetector: biaslyze/bias_detectors/masked_keyword_biasdetector.md
-    - Evaluators: biaslyze/evaluators.md
-    - Evaluation results: biaslyze/evaluation_results.md
-
+      - LimeKeywordBiasDetector: biaslyze/bias_detectors/lime_biasdetector.md
+      - CounterfactualBiasDetector: biaslyze/bias_detectors/counterfactual_biasdetector.md
+    - Results:
+      - LimeDetectionResult: biaslyze/results/lime_detection_results.md
+      - LimeSampleResult: biaslyze/results/lime_detection_results.md
+      - CounterfactualDetectionResult: biaslyze/results/counterfactual_detection_results.md
+      - CounterfactualConceptResult: biaslyze/results/counterfactual_detection_results.md
+      - CounterfactualSample: biaslyze/results/counterfactual_detection_results.md
 
 theme:
   name: material
