--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ spacy = "^3.5.0"
 loguru = "^0.6.0"
 matplotlib = "^3.7.1"
 bokeh = "^3.1.0"
+pytest = "^7.3.1"
+pytest-cov = "^4.0.0"
 
 
 [build-system]
