--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,19 +15,20 @@ eli5 = "^0.13.0"
 bertopic = "0.13.0"
 umap-learn = "^0.5.3"
 scipy = "1.8.0"
-mkdocs-material = "^9.1.1"
-mkgendocs = "^0.9.2"
-black = "^23.1.0"
 transformers = "^4.26.1"
-isort = "^5.12.0"
-ruff = "^0.0.254"
 spacy = "^3.5.0"
 loguru = "^0.6.0"
 matplotlib = "^3.7.1"
 bokeh = "^3.1.0"
+
+[tool.poetry.group.dev.dependencies]
+mkdocs-material = "^9.1.1"
+mkgendocs = "^0.9.2"
+black = "^23.1.0"
+isort = "^5.12.0"
+ruff = "^0.0.254"
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
-
 
 [build-system]
 requires = ["poetry-core"]
