Improve pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 description = ""
 authors = ["Tobias Sterbak <hello@tobiassterbak.com>", "Stina Lohmüller <>"]
 readme = "README.md"
+license = "LICENSE"
 
 [tool.poetry.dependencies]
 python = "<3.11,>=3.10"
@@ -30,6 +31,13 @@ ruff = "^0.0.254"
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
 
+[tool.isort]
+profile = "black"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[project.urls]
+"Homepage" = "https:biaslyze.org"
+"Bug Tracker" = "https://github.com/biaslyze-dev/biaslyze/issues"
