--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - Tutorials:
     - Overview: tutorials-overview.md
     - Disaster tweets: tutorials/disaster-tweets.md 
+    - Toxic comments: tutorials/tutorial_toxic-comments.md
   - API:
     - Overview: api-overview.md
     - Concept detectors: biaslyze/concept_detectors.md
