--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,13 +37,15 @@ theme:
 
   palette: 
     # Palette toggle for light mode
-    - scheme: dark
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
       toggle:
         icon: material/brightness-7 
         name: Switch to dark mode
 
     # Palette toggle for dark mode
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
