--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,14 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
 
+plugins:
+    - material-plausible
+
+extra:
+  analytics:
+    provider: plausible
+    domain: biaslyze.org
+
 extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
