--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ triton = "^2.0.0.post1"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs-material = "^9.1.1"
+material-plausible-plugin = "^0.2.0"
 mkgendocs = "^0.9.2"
 black = "^23.1.0"
 isort = "^5.12.0"
