--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ nvidia-cusparse-cu11 = "^11.7.5.86"
 nvidia-nccl-cu11 = "^2.16.5"
 nvidia-nvtx-cu11 = "^11.8.86"
 triton = "^2.0.0.post1"
+dash = "^2.11.1"
+plotly = "^5.15.0"
 
 [tool.poetry.group.dev.dependencies]
 mkdocs-material = "^9.1.1"
