Add new logo to website and readme, favicon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,8 @@ nav:
 
 theme:
   name: material
+  logo: resources/biaslyze-thumbnail.png
+  favicon: resources/biaslyze-thumbnail.png
   icon:
     repo: fontawesome/brands/git-alt
 
