Add social cards

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -25,6 +25,7 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+      - run: pip install pillow cairosvg
       - run: pip install mkdocs-material 
       - run: pip install material-plausible-plugin
       - run: mkdocs build
