--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: Biaslyze
+site_url: https://biaslyze.org/
+site_description: The NLP Bias Identification Toolkit
 
 repo_name: biaslyze
 repo_url: https://github.com/biaslyze-dev/biaslyze
@@ -65,6 +67,7 @@ markdown_extensions:
 
 plugins:
     - material-plausible
+    - social
 
 extra:
   analytics:
