--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ triton = "^2.0.0.post1"
 mkdocs-material = "^9.1.1"
 material-plausible-plugin = "^0.2.0"
 mkgendocs = "^0.9.2"
+Pillow = "^10.0.0"
+CairoSVG = "^2.7.0"
 black = "^23.1.0"
 isort = "^5.12.0"
 ruff = "^0.0.254"
