updated the logo and favicon in better quality

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,8 +28,8 @@ nav:
 
 theme:
   name: material
-  logo: resources/biaslyze-thumbnail.png
-  favicon: resources/biaslyze-thumbnail.png
+  logo: resources/biaslyze_logo_favicon.svg
+  favicon: resources/biaslyze_logo_favicon.png
   icon:
     repo: fontawesome/brands/git-alt
 
