--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
   - FAQ: faq.md
   - Tutorials:
     - How to identify bias in hate speech detection: tutorials/tutorial-toxic-comments.md
+    - How to work with custom concepts: tutorials/tutorial-working-with-custom-concepts.md
     - How to use counterfactual texts for bias mitigation: tutorials/tutorial-counterfactual-mitigation.md
   - API:
     - Bias detectors : 
