add utils load_results function and docs for it; deactivate LimeDetector import

--- a/mkgendocs.yml
+++ b/mkgendocs.yml
@@ -37,3 +37,7 @@ pages:
     classes:
       - Keyword
       - Concept
+  - page: "biaslyze/utils.md"
+    source: "biaslyze/utils.py"
+    functions:
+      - load_results
