--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - Concept detectors: biaslyze/concept_detectors.md
     - TextRepresentation: biaslyze/text_representation.md
     - Concept: biaslyze/concept_class.md
+    - Utils: biaslyze/utils.md
 
 theme:
   name: material
