Test with mkdocstrings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ nvidia-nvtx-cu11 = "^11.8.86"
 triton = "^2.0.0.post1"
 dash = "^2.11.1"
 plotly = "^5.15.0"
-mkdocstrings = "^0.22.0"
+mkdocstrings = {extras = ["crystal", "python"], version = "^0.22.0"}
 
 [tool.poetry.group.dev.dependencies]
 mkdocs-material = "^9.1.1"
