--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,9 +23,10 @@ nav:
     - Results:
       - CounterfactualDetectionResult: biaslyze/results/counterfactual_detection_results.md
       - LimeDetectionResult: biaslyze/results/lime_detection_results.md
+    - Concepts: 
+      - Concept: biaslyze/concept_class.md
     - Concept detectors: biaslyze/concept_detectors.md
     - TextRepresentation: biaslyze/text_representation.md
-    - Concept: biaslyze/concept_class.md
 
 theme:
   name: material
