--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,17 +34,25 @@ dash = "^2.11.1"
 plotly = "^5.15.0"
 dill = "^0.3.7"
 
+[tool.poetry.group.dev]
+optional = true
+
 [tool.poetry.group.dev.dependencies]
-mkdocs-material = "^9.1.1"
-material-plausible-plugin = "^0.2.0"
-mkgendocs = "^0.9.2"
-Pillow = "^10.0.0"
-CairoSVG = "^2.7.0"
 black = "^23.1.0"
 isort = "^5.12.0"
 ruff = "^0.0.254"
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+mkdocs-material = "^9.1.1"
+material-plausible-plugin = "^0.2.0"
+mkgendocs = "^0.9.2"
+Pillow = "^10.0.0"
+CairoSVG = "^2.7.0"
 
 [tool.isort]
 profile = "black"
