new tutorial for pretrained model analysis

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
   - Tutorials:
     - How to identify bias in hate speech detection: tutorials/tutorial-toxic-comments.md
     - How to use counterfactual texts for bias mitigation: tutorials/tutorial-counterfactual-mitigation.md
+    - How to use biaslyze to test pretrained hate speech detection models: tutorials/tutorial-hugging-hatexplain.md
   - API:
     - Bias detectors : 
       - CounterfactualBiasDetector: biaslyze/bias_detectors/counterfactual_biasdetector.md
