--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ isort = "^5.12.0"
 ruff = "^0.0.254"
 pytest = "^7.3.1"
 pytest-cov = "^4.0.0"
+mypy = "^1.5.1"
 
 [tool.poetry.group.docs]
 optional = true
@@ -53,6 +54,7 @@ material-plausible-plugin = "^0.2.0"
 mkgendocs = "^0.9.2"
 Pillow = "^10.0.0"
 CairoSVG = "^2.7.0"
+pydocstyle = "^6.3.0"
 
 [tool.isort]
 profile = "black"
