--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Testing and Linting
 
 on:
   push:
@@ -30,10 +30,8 @@ jobs:
         python -m spacy download en_core_web_sm
     - name: Lint with Ruff
       run: |
-        pip install ruff
         ruff --format=github --target-version=py310 --ignore E501 biaslyze/
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pip install pytest pytest-cov
         pytest --cov=biaslyze tests/ --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
