--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,3 +35,10 @@ jobs:
     - name: Test with pytest
       run: |
         pytest --cov=biaslyze tests/ --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
+    - name: Upload pytest test results
+      uses: actions/upload-artifact@v3
+      with:
+        name: test-results
+        path: junit/test-results.xml
+      # Use always() to always run this step to publish test results when there are test failures
+      if: ${{ always() }}
