--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,28 +13,29 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+    - name: Install Poetry
+      run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+    - name: Add Poetry to path
+      run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python -m spacy download en_core_web_sm
+        poetry install --with dev,docs
+        poetry run python -m spacy download en_core_web_sm
     - name: Lint with Ruff
       run: |
-        ruff --format=github --target-version=py310 --ignore E501 biaslyze/
+        poetry run ruff --format=github --target-version=py310 --ignore E501 biaslyze/
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest --cov=biaslyze tests/ --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
+        poetry run pytest --cov=biaslyze tests/ --junitxml=junit/test-results.xml --cov-report=xml --cov-report=html
     - name: Upload pytest test results
       uses: actions/upload-artifact@v3
       with:
