--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -13,7 +13,7 @@ jobs:
       with:
         python-version: "3.10"
     - name: Install Poetry
-      run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python
+      run: curl -sSL https://install.python-poetry.org | python3 -
     - name: Add Poetry to path
       run: echo "${HOME}/.poetry/bin" >> $GITHUB_PATH
     - name: Install dependencies
